# Concilia-o-Financeira-Inteligente

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
financial_reconciliation/: __init__.py  cli.py  config.py  database.py  fuzzy.py  matching.py  models.py  normalization.py  reports.py
financial_reconciliation/parsers/: __init__.py  common.py  csv_parser.py  excel_parser.py  ofx_parser.py  pdf_ledger_parser.py  txt_parser.py  universal.py
tests/: test_matching.py  test_normalization.py
